--- a/myideaway-server-framework/WebRoot/WEB-INF/web.xml
+++ b/myideaway-server-framework/WebRoot/WEB-INF/web.xml
@@ -47,7 +47,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>*.action</url-pattern>
 	</servlet-mapping>
 	<!-- spring mvc controller end -->
 	
