--- a/myideaway-server-framework/res/log4j.properties
+++ b/myideaway-server-framework/res/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=INFO, file
+log4j.rootLogger=DEBUG, stdout
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=${myideaway-server-framework.WebRoot}/logs/logs.log
 log4j.appender.file.MaxFileSize=100KB
