--- a/myideaway-server-framework/.settings/org.eclipse.core.resources.prefs
+++ b/myideaway-server-framework/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
+#Sun Dec 02 21:20:36 CST 2012
 eclipse.preferences.version=1
+encoding//WebRoot/pages/member/statisticsMember.jsp=UTF-8
+encoding//WebRoot/pages/menu.jsp=UTF-8
 encoding/<project>=UTF-8
